# telecalbot

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRECHECK.md  README.md  fly.toml  init-project.sh  pyproject.toml
.claude/: settings.json
.claude/commands/: continue.md  revise-plan.md  roadmap-to-issues.md  sync-progress.md
.github/: pull_request_template.md
.github/workflows/: codex-review-feedback.yml  codex-review.yml  deploy.yml  test.yml
adws/: adw_plan_build.py  data_types.py  trigger_webhook.py  version.py
adws/specs/: health-check-endpoint-plan.md
app/: README.md  __init__.py  config.py  constants.py  main.py  webhook_server.py
app/database/: __init__.py  connection.py  migrations.py  models.py
app/handlers/: __init__.py  admin.py  booking.py  duration_limit.py  help.py  start.py
app/services/: booking_service.py  calcom_client.py  duration_limit.py  user_preferences.py  whitelist.py
research/: FINDINGS.md  README.md  api_research_results.json  calcom_api_validator.py  requirements.txt
scripts/: start.sh  stop_apps.sh  update-template.sh
specs/: example-feature-spec.md  implementation-roadmap.md  telecalbot-specification.md
tests/: __init__.py  conftest.py  test_admin.py  test_booking.py  test_booking_duration.py  test_booking_service.py  test_calcom_client.py  test_ci_workflow.py  test_config.py  test_database.py  test_duration_limit.py  test_help.py  test_main.py  test_start.py  test_user_preferences.py  test_webhook_server.py  test_whitelist.py
